# nccl-plugin-gpudirect-tcpxo

./: .bazelrc  .gitignore  BUILD  CONTRIBUTING.md  LICENSE  MODULE.bazel  README.md  prepare_source.sh  prober_build.sh  retrieve_precompiled_libs.sh  rxdm.dockerfile  rxdm_build.sh  tcpxo.dockerfile  tcpxo_build.sh
GPUViz/: BUILD
GPUViz/src/: nccl_stats.h
buffer_mgmt_daemon/: BUILD  a3_gpu_rxq_configurator.cc  a3_gpu_rxq_configurator.h  addr_translator_interface.h  buffer_manager_service_interface.h  buffer_manager_version.h  clock.h  clock_interface.h  cuda_logging.cu  cuda_logging.h  fastrak_addr_translator.cc  fastrak_addr_translator.h  fastrak_buffer_resource_tracker.cc  fastrak_buffer_resource_tracker.h  fastrak_gpu_mem_importer.cc  fastrak_gpu_mem_importer.h  fastrak_gpu_nic_info.cc  fastrak_gpu_nic_info.h  fastrak_gpumem_manager.cc  fastrak_gpumem_manager_base.h  fastrak_gpumem_manager_cloud.cc  fastrak_gpumem_manager_cloud.h  fastrak_gpumem_manager_host_interface.h  fastrak_gpumem_manager_interface.h  fastrak_gpumem_manager_startup.cc  fastrak_gpumem_manager_startup.h  gpu_ip_server.cc  gpu_ip_server.h  gpu_rxq_configurator_interface.h  main_cloud.cc  page_allocator_interface.h  pci_utils.cc  pci_utils.h  status_utils.cc  status_utils.h  unix_socket_server.cc  unix_socket_server.h
buffer_mgmt_daemon/client/: BUILD  bounce_buffer_handle.h  buffer_mgr_client-interface.h  buffer_mgr_client.cc  buffer_mgr_client.h  unix_socket_client.cc  unix_socket_client.h
buffer_mgmt_daemon/common/: BUILD  nvidia_mem_share_interface.h  nvidia_tcpxo_mem_share.h  uds_helpers.cc  uds_helpers.h  unix_socket_connection.cc  unix_socket_connection.h
buffer_mgmt_daemon/oss/: BUILD  init.cc  init.h
buffer_mgmt_daemon/proto/: BUILD  tcpfastrak_buffer_mgmt_message.proto
cuda_helpers/: BUILD  cuda_helpers.cu  cuda_helpers.h  gpu_mem_helper_interface.h  gpu_mem_validator_interface.h
dmabuf_bridge/: BUILD  dmabuf_import_helper.h  dmabuf_importer.c  dmabuf_importer.h
dxs/: BUILD  clock-interface.h  sctp-timeout-queue-base.cc  sctp-timeout-queue-base.h  sctp-timeout-queue.cc  sctp-timeout-queue.h
dxs/client/: BUILD  atomic-future.h  base-interface.h  coalesce-iovecs.cc  coalesce-iovecs.h  control-command.cc  control-command.h  control-command.proto  control-message-handler-interface.h  data-sock.cc  data-sock.h  derive_dxs_address.cc  derive_dxs_address.h  dxs-client-interface.h  dxs-client-types.h  dxs-client.cc  dxs-client.h  guest-clock.h  guest-llcm-device.cc  guest-llcm-device.h  linearized-recv-op.h  listen-socket.h  llcm-handler.cc  llcm-handler.h  llcm-memory-interface.h  make-unique-with-cleanup.h  monotonic-timestamp.h  mtu_utils.h  recv-socket.h  relaxed-atomic.h  sctp-handler.cc  sctp-handler.h  send-op.h  send-socket.h  sequence-number.h  thread-shim-external.cc  thread-shim.h  wire-version.h
dxs/client/guest_llcm/: BUILD  guest_llcm.cc  guest_llcm.h  guest_llcm_tool.cc
dxs/client/oss/: BUILD  barrier.h  htonl.h  mmio.h  status_macros.h
dxs/client/spsc_queue/: BUILD  spsc_messaging_queue_pair.cc  spsc_messaging_queue_pair.h  spsc_queue_pair.cc  spsc_queue_pair.h  spsc_queue_pair.proto
kokoro/: build.sh
kokoro/rbe/: kokoro_build.sh  presubmit.cfg
nccl_cuda/: BUILD  cuda_common.cc  cuda_common.h  cuda_defs.h
net_util/: BUILD  network_system_call.h  network_system_call_interface.h
patches/: BUILD.bazel  grpc.patch  protobuf_undefined.patch  tf_serving.patch  webrtc.patch
scripts/: cleanup_tuning.sh  entrypoint_rxdm_container.sh  kernel_tuning.sh  tuning_helper.sh
tcpdirect_plugin/fastrak_offload/: BUILD  common.cc  common.h  const_params.h  fastrak_plugin.cc  fastrak_plugin_version.h  init.cc  init.h  macro.cc  macro.h  nccl_shim.cc  nccl_shim.h  nic_client_router.cc  nic_client_router.h  nic_client_router_interface.h  params.cc  params.h  plugin_symbols.map  profiler_factory.h  profiler_factory_cloud.cc  profiler_factory_gpuviz.cc  profiler_factory_gpuviz.h  profiler_gpuviz.cc  profiler_gpuviz.h  profiler_interface.h  profiler_noop.h  request.h  shared_defs.h  stats.cc  stats.h  syscalls.cc  syscalls.h  utilities.h
tcpdirect_plugin/nccl_compat/: BUILD  nccl_net_compat.h
tcpxo_prober/: BUILD  README.md
tcpxo_prober/scripts/: load_test.py
tcpxo_prober/src/: agent.cc  agent.h  connection-manager.proto  connection.cc  connection.h  main.cc  nic-manager.cc  nic-manager.h  prober.proto
tcpxo_scripts/: check_warn_log.sh  container_entry.sh  debug_info.sh  demo-run-nccl-test-tcpxo-via-mpi.sh  demo_mpi_entry_with_config_profile.sh  gen_hostfiles.sh  init_ssh.sh  mpi_entry.sh  nccl-env-profile-comma.sh  nccl-env-profile-simple.sh  nccl-env-profile.sh  run-allgather-current-installer-nccl.sh  run-allgather.sh  run-allreduce.sh  run-alltoall.sh  run-nccl-fastrak.sh  run-nccl-tcpxo.sh  run-nccl.sh  tune_net.sh  unix_client_prefix_selection.sh  workload_container_entry.sh
webrtc/: BUILD.bazel  build_sctp.sh
