load("@rules_cc//cc:defs.bzl", "cc_library")

package(default_visibility = ["//visibility:public"])

config_setting(
    name = "using_system_webrtc",
    values = {"define": "webrtc=system"},
)

sh_binary(
    name = "build_sctp",
    srcs = ["build_sctp.sh"],
    data = [
        "@webrtc_build//:all_srcs",
    ],
    deps = ["@bazel_tools//tools/bash/runfiles"],
)

# Append build rules for webrtc static libraries
alias(
    name = "webrtc",
    actual = select({
        ":using_system_webrtc": "@webrtc//:webrtc",
        "//conditions:default": ":webrtc_local",
    }),
)

alias(
    name = "webrtc_dbg",
    actual = select({
        ":using_system_webrtc": "@webrtc//:webrtc_dbg",
        "//conditions:default": ":webrtc_dbg_local",
    }),
)

cc_library(
    name = "webrtc_local",
    srcs = ["libwebrtc.a"],
    hdrs = glob(
        ["include/**/*.h"],
        allow_empty = True,
        exclude = ["include/third_party/**/*.h"],
    ),
    defines = [
        "WEBRTC_POSIX",
        "WEBRTC_LINUX",
        "WEBRTC_ENABLE_SYMBOL_EXPORT",
    ],
    includes = ["include"],
    linkopts = [
        "-ldl",
        "-pthread",
    ],
    alwayslink = 1,
)

cc_library(
    name = "webrtc_dbg_local",
    srcs = ["libwebrtc_debug.a"],
    hdrs = glob(
        ["include/**/*.h"],
        allow_empty = True,
        exclude = ["include/third_party/**/*.h"],
    ),
    defines = [
        "WEBRTC_POSIX",
        "WEBRTC_LINUX",
    ],
    includes = ["include"],
    linkopts = [
        "-ldl",
        "-pthread",
    ],
    alwayslink = 1,
)
